tests/idris2/basic014/expected
1/1: Building Rewrite (Rewrite.idr)
Error: While processing right hand side of wrongCommutes. Rewriting by m + k = k + m did not change type S k + m = m + S k.

Rewrite.idr:15:25--15:57
    |
 15 | wrongCommutes (S k) m = rewrite plusCommutes m k in ?bar
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of wrongCommutes2. Nat is not a rewrite rule type.

Rewrite.idr:19:26--19:43
    |
 19 | wrongCommutes2 (S k) m = rewrite m in ?bar
    |                          ^^^^^^^^^^^^^^^^^

